# sensors-esp

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
esp32/accelerometer/: Cargo.toml  README.md
esp32/accelerometer/src/: accelerometer.rs  main.rs
esp32/adc-dac/: Cargo.toml  README.md
esp32/adc-dac/src/: main.rs
esp32/blinky/: Cargo.toml  README.md
esp32/capacitive-switch/: Cargo.toml  README.md
esp32/capacitive-switch/src/: capacitive_sensor.rs  game.rs  main.rs
esp32/dtmf/: Cargo.toml  README.md
esp32/dtmf/src/: dtmf.rs  main.rs
esp32/lcd/: Cargo.toml  README.md
esp32/lcd/src/: lcd.rs  main.rs
esp32/line-tracking-sensor/: Cargo.toml  README.md
esp32/line-tracking-sensor/src/: main.rs
esp32/matrix/: Cargo.toml  README.md
esp32/matrix/src/: main.rs  matrix.rs
esp32/micro-sdcard/: Cargo.toml  README.md
esp32/micro-sdcard/src/: display.rs  encoder.rs  file_list.rs  main.rs  micro_sdcard.rs  rotary_encoder.rs
esp32/motor-driver/: Cargo.toml  README.md
esp32/motor-driver/remote-control/: README.md  pubspec.yaml
esp32/motor-driver/remote-control/android/: build.gradle
esp32/motor-driver/remote-control/android/app/: build.gradle
esp32/motor-driver/remote-control/android/app/src/main/: AndroidManifest.xml
esp32/motor-driver/remote-control/android/app/src/main/kotlin/com/example/remote_control/: MainActivity.kt
esp32/motor-driver/remote-control/lib/: main.dart
esp32/motor-driver/src/: main.rs  motor.rs  rgb.rs
esp32/mp3-player/: Cargo.toml  README.md
esp32/mp3-player/src/: main.rs
esp32/passive-buzzer/: Cargo.toml  README.md
esp32/passive-buzzer/src/: main.rs  player.rs  song.rs
esp32/passive-buzzer/src/songs/: green_hill.rs  mod.rs  super_mario_bros.rs  tetris.rs  the_lion_sleeps_tonight.rs
esp32/rotary-encoder/: Cargo.toml  README.md
esp32/rotary-encoder/src/: main.rs
examples/blinky/: main.rs
sensors/blinky/: Cargo.toml
shared/: Cargo.toml
shared/src/: lib.rs  rotary_encoder.rs  tiny_display.rs
wip/mp3-player/: Cargo.toml
