[package]
name = "blinky"
version = "0.1.0"
authors = ["Rafael"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[dependencies]
esp-idf-sys = { version = "0.33.1", features = ["native", "binstart"] }
esp-idf-hal = { version = "0.41.2", features = ["critical-section"] }
anyhow = "1.0.72"

[build-dependencies]
embuild = "0.31.2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
