[workspace.package]
version = "0.1.0"
authors = ["Rafael"]
edition = "2021"
rust-version = "1.71"

[workspace.dependencies]
esp-idf-sys = { version = "0.33.1", features = ["native", "binstart"] }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal", branch = "master", features = ["critical-section"] }
anyhow = "1.0.72"
embuild = "0.31.2"

[workspace]
resolver = "2"
members = ["esp32/*", "shared"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"