[package]
name = "shared"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-idf-sys.workspace = true
esp-idf-hal.workspace = true
anyhow.workspace = true
ssd1306 = "0.8.0"
embedded-graphics = "0.8.1"
profont = "0.7.0"
numfmt = "1.1.1"
