[package]
name = "shared"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-idf-sys = { version = "0.33.1", features = ["native", "binstart"] }
esp-idf-hal = "^0.41"
anyhow = "1.0.72"
embedded-graphics = "0.8.1"
profont = "0.7.0"
ssd1306 = "0.8.0"
numfmt = "1.1.1"
rotary-encoder-embedded = "0.2.0"
button-driver = { version = "0.1.1", features = ["std", "embedded_hal"] }
