[package]
name = "accelerometer"
version.workspace = true
edition.workspace = true

[dependencies]
esp-idf-sys.workspace = true
esp-idf-hal.workspace = true
anyhow.workspace = true
embedded-graphics.workspace = true
profont.workspace = true
shared = { path = "../../shared" }

[build-dependencies]
embuild.workspace = true
