[package]
name = "adc-dac"
version.workspace = true
edition.workspace = true

[dependencies]
esp-idf-sys = { version = "0.33.1", features = ["native", "binstart"] }
esp-idf-hal = "0.41.2"
embedded-graphics = "0.8.1"
anyhow = "1.0.72"
shared = { path = "../../shared" }
profont = "0.7.0"

[build-dependencies]
embuild.workspace = true
