[package]
name = "capacitive-switch"
version.workspace = true
edition.workspace = true

[dependencies]
esp-idf-sys = { version = "0.33.1", features = ["native", "binstart"] }
esp-idf-hal = "0.41.2"
anyhow = "1.0.72"
ssd1306 = "0.8.0"
embedded-graphics = "0.8.1"
profont = "0.7.0"
shared = { path = "../../shared" }
fastrand = "2.0.0"

[build-dependencies]
embuild.workspace = true
