[package]
name = "lcd"
version.workspace = true
edition.workspace = true

[dependencies]
esp-idf-sys = { version = "0.33.1", features = ["native", "binstart"] }
esp-idf-hal = "0.41.2"
anyhow = "1.0.72"
fastrand = "2.0.0"
shared = { path = "../../shared" }

[build-dependencies]
embuild.workspace = true
