[package]
name = "micro-sdcard"
version.workspace = true
edition.workspace = true

[dependencies]
esp-idf-sys.workspace = true
esp-idf-hal.workspace = true
anyhow.workspace = true
button-driver = { version = "0.1.1", features = ["std", "embedded_hal"] }
embedded-sdmmc = { version = "0.5.0" }
ssd1306 = "0.8.0"
embedded-graphics = "0.8.1"
profont = "0.7.0"
numfmt = "1.1.1"
rotary-encoder-embedded = "0.2.0"
shared = { path = "../../shared" }

[build-dependencies]
embuild.workspace = true
