[package]
name = "micro-sdcard"
version.workspace = true
edition.workspace = true

[dependencies]
esp-idf-sys = { version = "0.33.1", features = ["native", "binstart"] }
esp-idf-hal = "0.41.2"
anyhow = "1.0.72"
embedded-sdmmc = { version = "0.5.0" }
ssd1306 = "0.8.0"
embedded-graphics = "0.8.1"
profont = "0.7.0"
numfmt = "1.1.1"
shared = { path = "../../shared" }

[build-dependencies]
embuild.workspace = true
