[package]
name = "mp3-player"
version.workspace = true
edition.workspace = true

[dependencies]
esp-idf-sys.workspace = true
esp-idf-hal.workspace = true
anyhow.workspace = true
embedded-graphics = "0.7.1"
max7219-driver = "0.2.2"
shared = { path = "../../shared" }
dfr0299 = "0.1.1"

[build-dependencies]
embuild.workspace = true
