[package]
name = "rotary-encoder"
version.workspace = true
edition.workspace = true

[dependencies]
esp-idf-sys.workspace = true
esp-idf-hal.workspace = true
anyhow.workspace = true
rotary-encoder-embedded = "0.2.0"
embedded-controls = "0.1.5"
button-driver = { version = "0.1.1", features = ["std", "esp"] }
tm1637 = "0.1.0"

[build-dependencies]
embuild.workspace = true
