[package]
name = "mp3-player"
version.workspace = true
edition.workspace = true

[dependencies]
esp-idf-sys = { version = "0.33.1", features = ["native", "binstart"] }
esp-idf-hal = "0.41.2"
anyhow = "1.0.72"
embedded-graphics = "0.8.1"
max7219-driver = "0.2.2"
shared = { path = "../../shared" }
dfr0299 = "0.1.1"
bitflags = "2.4.0"

[build-dependencies]
embuild.workspace = true
